# ralume

./: .gitignore  Cargo.toml  README.md
data/: dev.local.Ralume.desktop  style.css
data/icons/hicolor/: index.theme
scripts/: install.sh  package-release.sh  run.sh
src/: main.rs
src/config/: mod.rs  settings.rs
src/portal/: state.rs
src/recorder/: audio.rs  encoders.rs  mod.rs  pipeline.rs
src/transcription/: audio.rs  chunks.rs  client.rs  mod.rs
src/ui/: events.rs  preferences.rs  shell.rs  window.rs
src/ui/overlays/: countdown.rs  floating_toolbar.rs  mod.rs
src/ui/pages/: ai.rs  library.rs  mod.rs  recording_detail.rs  settings.rs
